test/error/unterminated_comment_footer.true
File 0, line 4, col 0:
unterminated comment

